feat(web,api): implement initial setup screen
